# hoyolab-claim-bot

./: Cargo.toml  README.md  config.example.toml  default.nix  flake.nix
.github/: dependabot.yaml
.github/workflows/: debug.yaml  release.yaml
src/: claim.rs  config.rs  main.rs
