[package]
name = "hoyolab-claim-bot"
edition = "2021"
version = "1.0.1"

[dependencies]
anyhow = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
toml = "0.8"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.9", features = ["proxy-from-env", "native-tls", "json"] }